# attractor-basin-cognition

./: README.md  pyproject.toml
.github/workflows/: publish.yml
abcognition/: __init__.py  protocols.py  service.py  state.py
abcognition/field/: __init__.py  engine.py  protocols.py  state.py
tests/: test_field_engine.py  test_package_boundary.py  test_service.py
